# ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: seoul_animals.db
src/chatbot_server/app/: main.py
src/database/: __init__.py  __main__.py  client.py  config.py  demo.py  models.py  registry.py  service.py  storage.py
src/database/config/: seoul_districts.json
src/recommendation_server/: __init__.py
src/recommendation_server/app/: __init__.py  main.py  recommender.py
src/recommendation_server/app/static/: app.js  index.html  styles.css
